ajuste do swagger
