# src/controllers/authenticateController.js
@@ -2,7 +2,7 @@ const loginService = require('./../../services/authenticate.service');
 
 exports.Authorize = async (req, res, next) => {
     try {
-        const token = await loginService.authorize(req.body);
+        const token = await loginService.authorize({ socialId: req.body.socialId });
         res.json(token);
     } catch (error) {
         next(error);
@@ -11,7 +11,7 @@ exports.Authorize = async (req, res, next) => {
 
 exports.RefreshToken = async (req, res, next) => {
     try {
-        const refreshToken = await loginService.refreshToken(req.body);
+        const refreshToken = await loginService.refreshToken({ refreshToken: req.body.refreshToken });
         res.json(refreshToken);
     } catch (error) {
         next(error)
